version/0.31/_sources/api/solver/_autosummary/settings/electrolyte_porous.rst.txt
:orphan:

.. _electrolyte_porous:

electrolyte_porous
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.electrolyte_porous
    :show-inheritance:

.. rubric:: Attributes

==================================================   ======================================================

Attribute                                                                                           Summary

==================================================   ======================================================
:ref:`anode_interface <anode_interface>`                   Anode electrode interfaces with the electrolyte.

:ref:`cathode_interface <cathode_interface>`             Cathode electrode interfaces with the electrolyte.

:ref:`tortuosity_interface <tortuosity_interface>`                       Setup tortuosity zones and values.

:ref:`pore_size_interface <pore_size_interface>`              Setup Knudsen diffusion zones and pore sizes.

==================================================   ======================================================

.. rubric:: Included in:

==================   ========================

Parent                                Summary

==================   ========================
:ref:`sofc <sofc>`       SOFC model settings.

==================   ========================

